--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Cahee</title>
   </head>
   <body>
-    <header id="header" class="header">
+    <!-- <header id="header" class="header">
         <nav class="header__navigation navigation">
           <div class="navigation__container container">
             <div class="navigation__logo logo">Cahee</div>
@@ -29,7 +29,7 @@
           </div>
           <object class="scroll" data="images/scroll.svg" type="image/svg+xml"></object>
           </div>
-    </header>
+    </header> -->
   
     <main class="main">
       <section id="about" class="section-about about">
