--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <ul class="navigation__list">
               <li class="navigation__item"><a href="#header" class="navigation__link">HOME</a></li>
               <li class="navigation__item"><a href="#about" class="navigation__link">ABOUT</a></li>
-              <li class="navigation__item"><a href="" class="navigation__link">SERVICES</a></li>
+              <li class="navigation__item"><a href="#services" class="navigation__link">SERVICES</a></li>
               <li class="navigation__item"><a href="" class="navigation__link">GALLERY</a></li>
               <li class="navigation__item"><a href="" class="navigation__link">BLOG</a></li>
               <li class="navigation__item"><a href="" class="navigation__link">CONTACT</a></li>
@@ -46,7 +46,7 @@
       </section>
 
 
-      <section class="section-services services ">
+      <section id="services" class="section-services services ">
         <div class="section-services__container container">
           <div class="section-services__content">
             <ul class="section-services__list">
