--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       //= templates/about.html
       //= templates/services.html
       //= templates/gallery.html
+      //= templates/blog.html
     </main>
   </body>
 </html>
