--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       //= templates/gallery.html
       //= templates/subscribe.html
       //= templates/blog.html
+      //= templates/footer.html
     </main>
   </body>
 </html>
