--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
       //= templates/blog.html
       //= templates/footer.html
     </main>
+    <a href="#" title="UP" class="btn-up">Up &#8679;</a>
   </body>
 </html>
