--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       //= templates/gallery.html
       //= templates/subscribe.html
       //= templates/blog.html
+      //= templates/contact.html
       //= templates/footer.html
     </main>
     <a href="#" title="UP" class="btn-up">Up &#8679;</a>
